--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -19,6 +20,21 @@
     </head>
     <body>
         <!--==================== HEADER ====================-->
+            <div class="tab-container">
+    <div class="indicator"></div>
+    <button class="tab-button active" data-text="Home">
+      <ion-icon name="home" size="large"></ion-icon>
+    </button>
+    <button class="tab-button" data-text="Search">
+      <ion-icon name="search" size="large"></ion-icon>
+    </button>
+    <button class="tab-button" data-text="Message">
+      <ion-icon name="mail" size="large"></ion-icon>
+    </button>
+    <button class="tab-button" data-text="Profile">
+      <ion-icon name="person" size="large"></ion-icon>
+    </button>
+ </div>
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
